packages/jsii/test/negatives/neg.static-prop-name.1.ts
///!MATCH_ERROR: Method and property names must use camelCase: Prop

export class MyClass {
    static get Prop() {
        return 123;
    }
}
